--- a/less/homepage.less
+++ b/less/homepage.less
@@ -236,14 +236,16 @@ header {
     flex-direction: column;
 
     .mid-image-container {
-      max-height: 300px;
+      width: 100%;
 
       div {
         display: flex;
         justify-content: center;
-        height: auto;
+        width: 100%;
+
         img {
-          height: auto;
+          width: 298px;
+          height: 314px;
         }
       }
     }
